Parse file to dto